Resize iframe; use (static) HTML directly.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
 <head>
   <title>walthamstow.me</title>
+  <style type="text/css">
+            body, html
+            {
+                margin: 0; padding: 0; height: 100%; overflow: hidden;
+            }
+
+            #content
+            {
+                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+            }
+        </style>
 </head>
 <body>
 <script>
@@ -14,8 +25,9 @@
   ga('send', 'pageview');
 
 </script>
+<div id="content">
 <iframe src="https://docs.google.com/document/d/1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU/pub?embedded=true" width="100%" height="100%"></iframe>
-
+</div>
 </body>
 </html>
 
