Add basic meta.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
   <title>walthamstow.me</title>
   <style type="text/css">
-            body, html
-            {
-                margin: 0; padding: 0; height: 100%; overflow: hidden;
-            }
+    body, html
+    {
+        margin: 0; padding: 0; height: 100%; overflow: hidden;
+    }
 
-            #content
-            {
-                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
-            }
-        </style>
-</head>
-<body>
+    #content
+    {
+        position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+    }
+  </style>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -25,8 +23,11 @@
   ga('send', 'pageview');
 
 </script>
+<meta name="keywords" content="walthamstow,e17,community,london">
+</head>
+<body>
 <div id="content">
-<iframe src="https://docs.google.com/document/d/1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU/pub?embedded=true" width="100%" height="100%"></iframe>
+    <iframe src="https://docs.google.com/document/d/1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU/pub?embedded=true" width="100%" height="100%"></iframe>
 </div>
 </body>
 </html>
