Use https://gdoc.pub

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     {
         margin: 0; padding: 0; height: 100%; overflow: hidden;
     }
-
-    #content
+    div#content
     {
-        position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+        position:absolute; left: 0; right: 0; bottom: 0; top: 0; 
+    }
+    div#content iframe
+    {
+        margin: 0; padding: 0; height: 100%; width: 100%; border:none;
     }
   </style>
 <script>
@@ -27,7 +30,7 @@
 </head>
 <body>
 <div id="content">
-    <iframe src="https://docs.google.com/document/d/1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU/pub?embedded=true" width="100%" height="100%"></iframe>
+    <iframe src="https://gdoc.pub/doc/1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU"></iframe>
 </div>
 </body>
 </html>
