--- a/index.html
+++ b/index.html
@@ -1,37 +1,54 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>walthamstow.me</title>
-  <style type="text/css">
-    body, html
-    {
-        margin: 0; padding: 0; height: 100%; overflow: hidden;
-    }
-    div#content
-    {
-        position:absolute; left: 0; right: 0; bottom: 0; top: 0; 
-    }
-    div#content iframe
-    {
-        margin: 0; padding: 0; height: 100%; width: 100%; border:none;
-    }
-  </style>
+<title>walthamstow.me</title>
+<style type="text/css">
+body, html {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	overflow: hidden;
+}
+
+div#content {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+}
+
+div#content iframe {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
+	border: none;
+}
+</style>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	(function(i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r;
+		i[r] = i[r] || function() {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date();
+		a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+		a.async = 1;
+		a.src = g;
+		m.parentNode.insertBefore(a, m)
+	})(window, document, 'script',
+			'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-94019156-1', 'auto');
-  ga('send', 'pageview');
-
+	ga('create', 'UA-94019156-1', 'auto');
+	ga('send', 'pageview');
 </script>
 <meta name="keywords" content="walthamstow,e17,community,london">
 </head>
 <body>
-<div id="content">
-    <iframe src="https://gdoc.pub/doc/1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU"></iframe>
-</div>
+	<div id="content">
+		<iframe
+			src="https://gdoc.pub/doc/1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU"></iframe>
+	</div>
 </body>
 </html>
 
