Use the editing version for comments.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ div#content iframe {
 <body>
 	<div id="content">
 		<iframe
-			src="https://gdoc.pub/doc/1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU"></iframe>
+			src="https://docs.google.com/document/d/1eDRE8QkbZO-GGAYzXCSDQfsz97DZtWqMJZDlbDQH_cU/edit?embedded=true"></iframe>
 	</div>
 </body>
 </html>
