Swap editing javascript hack for modified simonwhitaker/github-fork-ribbon-css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 ---
 layout: default
 ---
+
+<a class="github-fork-ribbon"
+	href="https://docs.google.com/document/d/{{site.googledoc_id}}/edit?embedded=true"
+	title="Edit me!" target="_blank">Edit me!</a>
+
 <iframe id="gdoc" src="https://gdoc.pub/doc/{{site.googledoc_id}}"></iframe>
